feat: generate frontend api client